2009-04-23  John W. Eaton  <jwe@octave.org>

	* ov-class.cc (Fclass): Check newly constructed classes against
	the first constructed object of the class.

	* ov-class.h, ov-class.cc (octave_class::exmplar_info): New class.
	(exemplar_map): New static data member.
	(exemplar_iterator, exemplar_const_iterator): New typedefs.

	* ov-class.h (octave_class::nparents,
	octave_class::parent_class_name_list): New functions.
	* ov.h (octave_base_value::nparents,
	octave_base_value::parent_class_name_list): New functions.
	* ov-base.h, ov-base.cc (octave_base_value::nparents,
	octave_base_value::parent_class_name_list): New functions.
	(parent_class_names): Error if called for wrong type argument.

	* symtab.cc (load_out_of_date_fcn): New arg, dispatch_type.
	(out_of_date_check_internal): Pass dispatch type to
	load_out_of_date_fcn.

2009-04-22  John W. Eaton  <jwe@octave.org>

	* ov-base-int.cc (octave_base_int_helper<T, false,
	false>::char_value_out_of_range): Correct result for specialization.

	* ov-class.cc (octave_class::dotref, octave_class::subsasgn):
	Protect against possibly invalid octave_value -> string conversions.

2009-04-22  Robert T. Short  <octave@phaselockedsystems.com>

	* variables.cc (symbol_exist): Also return 1 for objects.
	* ov-base.h (octave_base_value::assign): New virtual function.
	* ov-class.h (octave_class::assign): New function.
	* ov-class.cc (octave_class::find_parent_class): Simplify.
	(octave_class::octave_class): Don't allow duplicate parent classes.
	(octave_class::subsasgn): Allow cls = method (cls, value) to work
	properly when method is a parent-class method.
	(get_method_class): New static function.
	(octave_class:subsasgn, octave_class::dotref): Use it.
	(F__isa_parent__): New function.

2009-04-22  Jaroslav Hajek  <highegg@gmail.com>

	* ov-range.cc (octave_range::char_array_value): New virtual function
	override.
	* ov-range.h: Declare it.

2009-04-22  Jaroslav Hajek  <highegg@gmail.com>
